--- a/src/cwPopout.less
+++ b/src/cwPopout.less
@@ -34,3 +34,53 @@
         width: 80%;
     }
 }
+
+
+
+.cwPopoutTemplateContent{
+    div.tabs-container{
+        ul.list-tabs{
+            margin: 0px;
+            padding-left: 5px;
+        }
+        li.tab{
+            display: inline-block;
+            height: 47px;
+
+            .tab-item{
+                -moz-transition: box-shadow .3s;
+                -o-transition: box-shadow .3s;
+                -webkit-transition: box-shadow .3s;
+                transition: box-shadow .3s;
+                color: rgba(0,0,0,.8);
+                display: block;
+                height: 48px;
+                line-height: 48px;
+                padding: 0 1rem;
+            }
+        }
+
+        .tab-active > .tab-item{
+            -moz-box-shadow: inset 0 -2px @cwColor1;
+            -webkit-box-shadow: inset 0 -2px @cwColor1;
+            box-shadow: inset 0 -2px @cwColor1;
+            -moz-transition: none;
+            -o-transition: none;
+            -webkit-transition: none;
+            transition: none;
+            color: @cwColor1;
+        }
+    }
+    div.tabs-region{
+        -moz-box-shadow: inset 0 -1px rgba(0,0,0,.12);
+        -webkit-box-shadow: inset 0 -1px rgba(0,0,0,.12);
+        box-shadow: inset 0 -1px rgba(0,0,0,.12);
+        height: 48px;
+        vertical-align: top;
+        width: 100%;
+    }
+
+    div.view-container{
+        margin: 0.5em;
+    }
+}
