--- a/src/cwPopout.less
+++ b/src/cwPopout.less
@@ -37,17 +37,17 @@
 
 
 
-.cwPopoutTemplateContent{
+.cw-diagram-popout-container, .popout-content{
     div.tabs-container{
         ul.list-tabs{
             margin: 0px;
             padding-left: 5px;
         }
-        li.tab{
+        li.item-tab{
             display: inline-block;
             height: 47px;
 
-            .tab-item{
+            span.tab-item{
                 -moz-transition: box-shadow .3s;
                 -o-transition: box-shadow .3s;
                 -webkit-transition: box-shadow .3s;
@@ -60,7 +60,7 @@
             }
         }
 
-        .tab-active > .tab-item{
+        .tab-active > span.tab-item{
             -moz-box-shadow: inset 0 -2px @cwColor1;
             -webkit-box-shadow: inset 0 -2px @cwColor1;
             box-shadow: inset 0 -2px @cwColor1;
@@ -82,5 +82,19 @@
 
     div.view-container{
         margin: 0.5em;
+    }
+}
+
+
+
+.cw-diagram-popout-container {
+    display: flex;
+    flex-wrap: wrap;
+    > div {
+        width: 100%;
+    }
+    .property-box-asso, .property-box {
+        width: 400px;
+        margin-right: 2%;
     }
 }
