new position for expander button

--- a/src/cwPopout.less
+++ b/src/cwPopout.less
@@ -6,7 +6,7 @@
     border-right: 20px solid rgba(0,0,0,0.25);
     border-top: 20px solid transparent;
     left: -20px;
-    top: 50%;
+    top: 500px;
     background-color: transparent;
     cursor: pointer;
     font-size: 20px;
