Enable edit mode for properties only

--- a/src/cwPopout.less
+++ b/src/cwPopout.less
@@ -6,7 +6,7 @@
     border-right: 20px solid rgba(0,0,0,0.25);
     border-top: 20px solid transparent;
     left: -20px;
-    top: 500px;
+    top: 50%;
     background-color: transparent;
     cursor: pointer;
     font-size: 20px;
@@ -38,6 +38,16 @@
 
 
 .cw-diagram-popout-container, .popout-content{
+    ul.cw-list{
+        width: 100%;
+    }
+    
+    div.actions-container{
+        .btn{
+            float: right;
+        }
+    }
+
     div.tabs-container{
         ul.list-tabs{
             margin: 0px;
