--- a/src/cwPopout.less
+++ b/src/cwPopout.less
@@ -52,10 +52,14 @@
         ul.list-tabs{
             margin: 0px;
             padding-left: 5px;
+            display: flex;
         }
         li.item-tab{
             display: inline-block;
             height: 47px;
+            text-overflow: ellipsis;
+            overflow: hidden;
+            white-space: nowrap;
 
             span.tab-item{
                 -moz-transition: box-shadow .3s;
