--- a/src/cwPopout.less
+++ b/src/cwPopout.less
@@ -1,115 +1,120 @@
+// out: ./cwPopout.css, sourcemap: false, compress: true
 @import "../../_mixins";
 @import "../../_variables";
 
 .panel-expander {
-    border-bottom: 20px solid transparent;
-    border-right: 20px solid rgba(0,0,0,0.25);
-    border-top: 20px solid transparent;
-    left: -20px;
-    top: 50%;
-    background-color: transparent;
-    cursor: pointer;
-    font-size: 20px;
-    line-height: 160px;
-    width: 0;
-    z-index: 1010;
-    position: absolute;
+  border-bottom: 20px solid transparent;
+  border-right: 20px solid rgba(0, 0, 0, 0.25);
+  border-top: 20px solid transparent;
+  left: -20px;
+  top: 50%;
+  background-color: transparent;
+  cursor: pointer;
+  font-size: 20px;
+  line-height: 160px;
+  width: 0;
+  z-index: 1010;
+  position: absolute;
 }
-.panel-expander:before{
+.panel-expander:before {
+  font-family: FontAwesome;
+  content: "\f104";
+  padding-left: 5px;
+  color: @cwTextColor;
+}
+
+.popout-expanded {
+  .panel-expander:before {
     font-family: FontAwesome;
-    content: "\f104";
-    padding-left: 5px;
-    color: @cwTextColor;
+    content: "\f105";
+  }
 }
 
-.popout-expanded{
-    .panel-expander:before{
-        font-family: FontAwesome;
-        content: "\f105";
-    }
+@media screen and (min-width: 1024px) {
+  .popout-open .popout.popout-expanded {
+    width: 70%;
+  }
 }
 
-@media screen and (min-width: 1024px){
-    .popout-open .popout.popout-expanded {
-        width: 70%;
-    }
+div.cw-diagram-popout-container .actions-container {
+  display: none;
 }
 
+.cw-diagram-popout-container,
+.popout-content {
+  ul.cw-list {
+    width: 100%;
+  }
 
-
-.cw-diagram-popout-container, .popout-content{
-    ul.cw-list{
-        width: 100%;
+  div.actions-container {
+    .btn {
+      float: right;
     }
-    
-    div.actions-container{
-        .btn{
-            float: right;
-        }
+  }
+
+  div.tabs-container {
+    ul.list-tabs {
+      margin: 0px;
+      padding-left: 5px;
+      display: flex;
     }
+    li.item-tab {
+      display: inline-block;
+      height: 47px;
+      text-overflow: ellipsis;
+      overflow: hidden;
+      white-space: nowrap;
 
-    div.tabs-container{
-        ul.list-tabs{
-            margin: 0px;
-            padding-left: 5px;
-            display: flex;
-        }
-        li.item-tab{
-            display: inline-block;
-            height: 47px;
-            text-overflow: ellipsis;
-            overflow: hidden;
-            white-space: nowrap;
-
-            span.tab-item{
-                -moz-transition: box-shadow .3s;
-                -o-transition: box-shadow .3s;
-                -webkit-transition: box-shadow .3s;
-                transition: box-shadow .3s;
-                color: rgba(0,0,0,.8);
-                display: block;
-                height: 48px;
-                line-height: 48px;
-                padding: 0 1rem;
-            }
-        }
-
-        .tab-active > span.tab-item{
-            -moz-box-shadow: inset 0 -2px @cwColor1;
-            -webkit-box-shadow: inset 0 -2px @cwColor1;
-            box-shadow: inset 0 -2px @cwColor1;
-            -moz-transition: none;
-            -o-transition: none;
-            -webkit-transition: none;
-            transition: none;
-            color: @cwColor1;
-        }
-    }
-    div.tabs-region{
-        -moz-box-shadow: inset 0 -1px rgba(0,0,0,.12);
-        -webkit-box-shadow: inset 0 -1px rgba(0,0,0,.12);
-        box-shadow: inset 0 -1px rgba(0,0,0,.12);
+      span.tab-item {
+        -moz-transition: box-shadow 0.3s;
+        -o-transition: box-shadow 0.3s;
+        -webkit-transition: box-shadow 0.3s;
+        transition: box-shadow 0.3s;
+        color: rgba(0, 0, 0, 0.8);
+        display: block;
         height: 48px;
-        vertical-align: top;
-        width: 100%;
+        line-height: 48px;
+        padding: 0 1rem;
+      }
     }
 
-    div.view-container{
-        margin: 0.5em;
+    .tab-active > span.tab-item {
+      -moz-box-shadow: inset 0 -2px @cwColor1;
+      -webkit-box-shadow: inset 0 -2px @cwColor1;
+      box-shadow: inset 0 -2px @cwColor1;
+      -moz-transition: none;
+      -o-transition: none;
+      -webkit-transition: none;
+      transition: none;
+      color: @cwColor1;
     }
+  }
+  div.tabs-region {
+    -moz-box-shadow: inset 0 -1px rgba(0, 0, 0, 0.12);
+    -webkit-box-shadow: inset 0 -1px rgba(0, 0, 0, 0.12);
+    box-shadow: inset 0 -1px rgba(0, 0, 0, 0.12);
+    height: 48px;
+    vertical-align: top;
+    width: 100%;
+  }
+
+  div.view-container {
+    margin: 0.5em;
+  }
 }
-
 
 .view-region > div {
+  display: flex;
+  flex-wrap: wrap;
+  > div {
     display: flex;
     flex-wrap: wrap;
-    > div {
-        display: flex;
-        flex-wrap: wrap;
-        width: 100%;
-    }
-    .property-box-asso, .property-box, .cwPropertiesTableContainer {
-        width: 600px;
-        margin-right: 2%;
-    }
+    width: 100%;
+  }
+  .property-box-asso,
+  .property-box,
+  .cwPropertiesTableContainer {
+    width: 600px;
+    margin-right: 2%;
+  }
 }
