--- a/src/cwPopout.less
+++ b/src/cwPopout.less
@@ -103,6 +103,13 @@ div.cw-diagram-popout-container .actions-container {
   }
 }
 
+.tableForPopoutWrapper {
+  overflow-x: auto;
+  .cw-grid {
+    max-width: 90%;
+  }
+}
+
 .view-region > div {
   display: flex;
   flex-wrap: wrap;
