--- a/src/cwPopout.less
+++ b/src/cwPopout.less
@@ -31,7 +31,7 @@
 
   .cw-diagram-popout-container {
     overflow: auto;
-    height: calc(100vh - 80px);
+    /*height: calc(100vh - 80px); hard coded in template cause evolve is stupid*/
   }
 }
 
