fix issue with comment workflow

--- a/src/cwPopout.less
+++ b/src/cwPopout.less
@@ -157,4 +157,11 @@
 
 .popout.fixe-position .popout-content {
   overflow-y: scroll;
+
+  .cw-submit #container-container #comment-container {
+    position: initial;
+  }
+  .cw-submit #container-container {
+    position: initial;
+  }
 }
