fixing height issues

--- a/src/cwPopout.less
+++ b/src/cwPopout.less
@@ -9,6 +9,11 @@
 .popout.fixe-position {
   position: fixed;
   top: 40px;
+
+  .popout-content {
+    overflow-y: auto !important;
+  }
+
   ::-webkit-scrollbar {
     width: 10px;
     height: 10px;
