adding association edit

--- a/src/cwPopout.less
+++ b/src/cwPopout.less
@@ -12,6 +12,9 @@
 
   .popout-content {
     overflow-y: auto !important;
+    .btn.cw-create-target-item {
+      display: none;
+    }
   }
 
   ::-webkit-scrollbar {
