popout can now edit association

--- a/src/cwPopout.less
+++ b/src/cwPopout.less
@@ -167,10 +167,13 @@
   overflow-y: scroll;
 
   .cw-submit #container-container #comment-container {
-    position: initial;
+    position: static;
   }
   .cw-submit #container-container {
-    position: initial;
+    position: static;
+    textarea {
+      min-height: 100px;
+    }
   }
 }
 
