fix issue for IE

--- a/src/cwPopout.less
+++ b/src/cwPopout.less
@@ -22,6 +22,9 @@
     height: 10px;
   }
 
+  @media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
+    margin-right: 15px;
+  }
   /* Track */
   ::-webkit-scrollbar-track {
     background: #f1f1f1;
